add open icon to news cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ use_hero: true
 <div id="news-div">
     <a href="{{ post.url }}">
         <div class="card-panel">
-            <h4>{{ post.title }}</h4>
+            <h4>{{ post.title }}<i class="material-icons right">open_in_new</i></h4>
             <p class="black-text">{{ post.excerpt }}</p>
         </div>
     </a>
