add underline animation to all page titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 use_hero: true
 ---
 
-<h1 id="news" class="center section-title">News</h1>
+<h1 id="news" class="center to-underline">News</h1>
 {% for post in site.posts %}
 <div id="news-div">
     <a href="{{ post.url }}">
