increase intro section padding and increase default line height

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 use_hero: true
 ---
 
-<div class="section">
+<div class="section index-section justified">
     <h1 id="intro" class="center to-underline">Intro</h1>
     <p>Autodidactic Intelligent Minors (Team #1123) is a dedicated group of students, families, and mentors teamed up together to participate in the FIRST Foundation's robotics competition. Our team is unique because we are a community-based team. AIM offers an opportunity for any student to participate regardless of their school affiliation.</p>
 </div>
 
 <div class="divider"></div>
 
-<div class="section">
+<div class="section index-section">
     <h1 id="news" class="center to-underline">News</h1>
     {% for post in site.posts %}
     <div id="news-div">
