add promo table to intro section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@ use_hero: true
 
 <div class="section index-section justified">
     <h1 id="intro" class="center to-underline">Intro</h1>
+    <div class="row promo-table">
+        <div class="col s4">
+            <div class="center">
+                <i class="material-icons blue-text text-accent-4">book</i>
+                <p class="center">Autodidactic</p>
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="center">
+                <i class="material-icons blue-text text-accent-4">wb_incandescent</i>
+                <p class="center">Intelligent</p>
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="center">
+                <i class="material-icons blue-text text-accent-4">face</i>
+                <p class="center">Minors</p>
+            </div>
+        </div>
+    </div>
     <p>Autodidactic Intelligent Minors (Team #1123) is a dedicated group of students, families, and mentors teamed up together to participate in the FIRST Foundation's robotics competition. Our team is unique because we are a community-based team. AIM offers an opportunity for any student to participate regardless of their school affiliation.</p>
 </div>
 
