add automatic excerpts

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ is_index: true
             <div class="card-panel">
                 <h4>{{ post.title }}<i class="material-icons right">open_in_new</i></h4>
                 <span class="grey-text">{{ post.date | date: "%B %-d, %Y" }}</span>
-                <p class="black-text">{{ post.excerpt }}</p>
+                <p class="black-text">{{ post.excerpt | strip_html | truncate: 200 }}</p>
             </div>
         </a>
     </div>
