--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,26 @@ permalink: /contact/
 
 <h1 class="center to-underline">Contact Us</h1>
 
-Want to join AIM Robotics, or just want to chat? <a href="mailto:{{ site.email }}">Send us an email!</a>
+<div class="row">
+    <div class="col s12 m10 l5 offset-m1">
+        <form action="https://formspree.io/{{ site.email }}" method="POST">
+            <div class="input-field">
+                <input id="email-name" type="email" name="name" required>
+                <label for="email-name" data-error="Invalid">Name</label>
+            </div>
+            <div class="input-field">
+                <input id="email-address" type="email" class="validate" name="_replyto" required>
+                <label for="email-address" data-error="Invalid">Email Address</label>
+            </div>
+            <div class="input-field">
+                <textarea id="email-content" class="materialize-textarea" required></textarea>
+                <label for="email-content" data-error="Invalid">Message</label>
+            </div>
+            <button class="btn waves-effect waves-light" type="submit">Send<i class="material-icons right">send</i></button>
+        </form>
+    </div>
 
-<iframe width="600" height="350" frameborder="0" style="border:0;width:100%;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC-JvENrp1A8grQ6j2B825vNj3FG7DHndU&q=AIM+Robotics+Campus,Fairfax+VA" allowfullscreen></iframe>
+    <div class="col s12 m12 l7">
+        <iframe width="600" height="370" frameborder="0" style="border:0;width:100%;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC-JvENrp1A8grQ6j2B825vNj3FG7DHndU&q=AIM+Robotics+Campus,Fairfax+VA" allowfullscreen></iframe>
+    </div>
+</div>
