add sponsors section to index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ is_index: true
 ---
 
 <div class="section index-section justified">
-    <h1 id="intro" class="center to-underline">Intro</h1>
     <div class="row promo-table">
         <div class="col s4">
             <div class="center">
@@ -26,6 +25,24 @@ is_index: true
         </div>
     </div>
     <p>Autodidactic Intelligent Minors (Team #1123) is a dedicated group of students, families, and mentors teamed up together to participate in the FIRST Foundation's robotics competition. Our team is unique because we are a community-based team. AIM offers an opportunity for any student to participate regardless of their school affiliation.</p>
+</div>
+
+<div class="divider"></div>
+
+<div class="section">
+    <h1 id="sponsors" class="center to-underline">Sponsors</h1>
+    <div class="row sponsors-div">
+        <div class="col s10 m10 l4 offset-s1 offset-m1">
+            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
+        </div>
+        <div class="col s10 m10 l4 offset-s1 offset-m1">
+            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
+        </div>
+<div class="col s10 m10 l4 offset-s1 offset-m1">
+            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
+        </div>
+
+    </div>
 </div>
 
 <div class="divider"></div>
