--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@ is_index: true
 <div class="section">
     <h1 id="sponsors" class="center to-underline">Sponsors</h1>
     <div class="row sponsors-div">
-        <div class="col s10 m10 l4 offset-s1 offset-m1">
-            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
+        {% for image in site.static_files %}
+        {% if image.path contains 'img/sponsors' %}
+        <div class="col s12 m10 l8 offset-m1 offset-l2">
+            <img src="{{ image.path | relative_url }}">
         </div>
-        <div class="col s10 m10 l4 offset-s1 offset-m1">
-            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
-        </div>
-<div class="col s10 m10 l4 offset-s1 offset-m1">
-            <img src="{{ '/assets/img/cte.jpg' | relative_url }}">
-        </div>
-
+        {% endif %}
+        {% endfor %}
     </div>
 </div>
 
