--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ is_index: true
 <div class="section index-section">
     <h1 id="news" class="center to-underline">News</h1>
     {% for post in site.posts limit:5 %}
-    <div id="news-div">
+    <div class="news-div">
         <a href="{{ post.url }}">
             <div class="card-panel">
                 <h4>{{ post.title }}<i class="material-icons right">open_in_new</i></h4>
