--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ is_index: true
             <div class="card-panel">
                 <h4>{{ post.title }}</h4>
                 <span class="grey-text">{{ post.date | date: "%B %-d, %Y" }}</span>
+                <br><br>
+                {% for tag in post.tags %}
+                <span class="chip">{{ tag }}</span>
+                {% endfor %}
                 <p class="black-text">{{ post.excerpt | strip_html | truncatewords: 40 }}</p>
             </div>
         </a>
