adjust index page spacing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ is_index: true
             </div>
         </div>
     </div>
-    <p>Autodidactic Intelligent Minors (Team #1123) is a dedicated group of students, families, and mentors teamed up together to participate in the FIRST Foundation's robotics competition. Our team is unique because we are a community-based team. AIM offers an opportunity for any student to participate regardless of their school affiliation.</p>
+    <p class="intro">Autodidactic Intelligent Minors (Team #1123) is a dedicated group of students, families, and mentors teamed up together to participate in the FIRST Foundation's robotics competition. Our team is unique because we are a community-based team. AIM offers an opportunity for any student to participate regardless of their school affiliation.</p>
 </div>
 
 <div class="divider"></div>
