--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,17 @@ permalink: /contact/
 
 <div class="row">
     <div class="col s12 m10 l5 offset-m1">
-        <form action="https://formspree.io/{{ site.email }}" method="POST">
+        <form action="https://script.google.com/macros/s/AKfycbyCX55H_KHQxTO2H7PuO2dJWfwVWqLUnJ-CtEhn4vAeFGoJlEW2/exec" method="POST">
             <div class="input-field">
-                <input id="email-name" type="email" name="name" required>
+                <input id="email-name" type="text" name="name" required>
                 <label for="email-name" data-error="Invalid">Name</label>
             </div>
             <div class="input-field">
-                <input id="email-address" type="email" class="validate" name="_replyto" required>
+                <input id="email-address" type="email" class="validate" name="email" required>
                 <label for="email-address" data-error="Invalid">Email Address</label>
             </div>
             <div class="input-field">
-                <textarea id="email-content" class="materialize-textarea" required></textarea>
+                <textarea id="email-content" class="materialize-textarea" name="message" required></textarea>
                 <label for="email-content" data-error="Invalid">Message</label>
             </div>
             <button class="btn waves-effect waves-light" type="submit">Send<i class="material-icons right">send</i></button>
@@ -27,6 +27,7 @@ permalink: /contact/
     </div>
 
     <div class="col s12 m12 l7">
-        <iframe width="600" height="370" frameborder="0" style="border:0;width:100%;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC-JvENrp1A8grQ6j2B825vNj3FG7DHndU&q=AIM+Robotics+Campus,Fairfax+VA" allowfullscreen></iframe>
+        <!-- TODO: update the address -->
+        <!--<iframe width="600" height="370" frameborder="0" style="border:0;width:100%;" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC-JvENrp1A8grQ6j2B825vNj3FG7DHndU&q=" allowfullscreen></iframe>-->
     </div>
 </div>
